--- a/README.textile
+++ b/README.textile
@@ -46,10 +46,9 @@ http://github.com/fgrehm/QtGas/issues
 
 h2. License
 
-<code>
 (The MIT License)
 
-Copyright (c) 2010 Fábio Rehm
+Copyright (c) 2010 Fabio Rehm
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
@@ -69,4 +68,3 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
 CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
 TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-</code>
