--- a/README.textile
+++ b/README.textile
@@ -1,65 +1,43 @@
 h1. QtGas
 
-
 h2. Description
 
-QtGas is a mobile application for tracking gas mileage and vehicle maintenance. It was inspired by "GasCubby":http://www.appcubby.com/gas/index.html for iPhone OS and will target all "Qt framework":http://qt.nokia.com/ supported platforms.
+QtGas is a mobile application for tracking gas mileage and vehicle maintenance. It was inspired by "GasCubby":http://www.appcubby.com/gas/index.html for the iPhone OS and will target all "Qt framework":http://qt.nokia.com/ supported platforms.
+
+h3. Installation
+
+"Download":http://github.com/fgrehm/QtGas/downloads the package for your platform, unpack files and run the executable :-)
 
 h3. Usage
 
-Fire up the application and start adding fill up records. At this stage the application assumes you have a brand new car, so it will calculate MPG from an odometer of 0 Km. Because of that just add a dummy initial record with your current odometer.
+When you run the applications for the first time you will be asked for car's current odometer, you should fill up your tank and then fill in the form. After that you can start adding fill up records!
 
-If you want to clean up your information, just delete 'storage' folder that was created on the same path as the executable.
+If you want to clean up your data, just delete the 'storage' folder on the same path as the executable.
 
+h3. Dependencies
+
+* "Qt 4.7 Framework":http://qt.nokia.com/ compiled with "Declarative UI (QML)":http://doc.qt.nokia.com/4.7-snapshot/declarativeui.html support enabled
+* "persistence.js":http://github.com/zefhemel/persistencejs
 
 h2. Supported platforms
 
-At the moment it was only tested on Windows XP and a Windows Mobile 6.5.3 WVGA (a hacked HTC Blackstone) phone and I've got plans to add support for Maemo and Symbian. Let me know if you are interested in trying it out on some other platform.
+At the moment it was only tested on a Windows Mobile 6.5.3 WVGA phone (a hacked HTC Blackstone) and Maemo 5 under scratchbox and I've got plans to add support for Symbian in the future. Let me know if you are interested in trying it out on some other "non-official" platforms.
 
-Please note that I'll target touchscreen devices first and later will think about adding support for non-touchscreen ones.
-
-
-h2. Requirements
-
-h3. Windows Mobile
-
-Visual Visual C++ Runtime.
-
-
-h2. Installation
-
-h3. Windows Mobile
-
-The application is distributed as an executable and soon you'll be able to download an initial version from "here":http://github.com/fgrehm/QtGas/downloads.
-
-
-h2. Contributing
-
-QtGas makes use of "Qt's Declarative UI":http://doc.trolltech.org/4.7-snapshot/declarativeui.html which will be available from 4.7 version of Qt framework. Although there is a "Technology Preview":http://qt.nokia.com/developer/qt-qtcreator-prerelease avaiable, it was tested with lastest sources from "Gitorious 4.7 branch":http://qt.gitorious.org/qt. Soon I'll try compiling it with the technology preview to see if it works.
-
-You'll also need Microsoft Visual Studio, Microsoft Windows Mobile 6.5 SDK, ...
-
-h3. Building Qt framework
-
-<code>
-// TOWRITE
-</code>
-
-h3. Building QtGas
-
-<code>
-// TOWRITE
-</code>
+Please note that I'll target touchscreen devices first and later will work on adding support for non-touchscreen ones.
 
 h2. Issue tracker
 
 "http://github.com/fgrehm/QtGas/issues":http://github.com/fgrehm/QtGas/issues
 
+h2. Roadmap
+
+"http://wiki.github.com/fgrehm/QtGas/":http://wiki.github.com/fgrehm/QtGas/
+
 h2. License
 
 (The MIT License)
 
-Copyright (c) 2010 Fabio Rehm
+Copyright (c) 2010 Fábio Rehm
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the 'Software'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
